--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "dependencies": {
     "bad-words": "^3.0.4",
-    "serverless": "^2.70.0",
+    "serverless": "^3.0.0-pre.7cd71b9a",
     "serverless-bundle": "^5.2.0"
   }
 }
