external adapter flow

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:gas": "cross-env REPORT_GAS=true hardhat test --network hardhat",
     "start": "cd client && yarn start",
     "chain": "hardhat node --network hardhat --no-deploy",
+    "deploy:oracle": "hardhat deploy --tags 'OracleWrapper'",
     "deploy": "hardhat deploy --tags 'Character,Controller'",
+    "sls:d": "serverless deploy",
     "console": "hardhat console",
     "publish:kovan": "hardhat export --network kovan --export client/src/eth/kovan/deploy.json",
     "verify": "yarn verify:sourcify && yarn verify:etherscan && yarn verify:tenderly",
