--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "solidity.compileUsingRemoteVersion": "v0.8.11+commit.d7f03943",
-  "solidity.defaultCompiler": "embedded"
+  "solidity.defaultCompiler": "remote"
 }
